--- a/users/tradeRecord.html
+++ b/users/tradeRecord.html
@@ -16,35 +16,29 @@
 		    <h1 class="mui-title">交易记录</h1>
 		</header>
 		<div class="mui-content">
-			<!--<div class="no_data">暂无交易记录</div>-->
+			<div class="no_data" id="no_data">暂无交易记录</div>
 			<div class="trade_body" id="tadeMain">
-				<div class="each_trade newact" url="/users/tradeDetail.html"/>
-					<!--左侧序号-->
+				<!--<div class="each_trade newact" url="/users/tradeDetail.html"/>
 					<div class="left_trade">
 						<span>25</span>
 					</div>
-					<!--中间-->
 					<div class="middle_trade">
 						<div class="hash_num">
 							<span>交易Hash:</span>
 							0ssxs...
 						</div>
-						<!--<div class="trade_date">2018-03-03 13:00</div>-->
+						<div class="trade_date">2018-03-03 13:00</div>
 					</div>
-					<!--右侧-->
 					<div class="right_trade">
-						<!--绿色--转出成功-->
-						<!--<div class="success_add">+100.00DCAR</div>-->
-						<!--橙色--转入成功-->
+						<div class="success_add">+100.00DCAR</div>
 						<div class="orange_into">-10.00 DCAR</div>
-						<!--红色--交易失败-->
-						<!--<div class="failure_trade">-10.00DCAR</div>-->
+						<div class="failure_trade">-10.00DCAR</div>
 						<div class="trade_state">交易成功</div>
-						<!--<div class="trade_state">交易关闭</div>-->
+						<div class="trade_state">交易关闭</div>
 					</div>
-				</div>
+				</div>-->
 			</div>
-			<div class="loading_box">
+			<div class="loading_box" id="loading_box">
 				<button class="loading">加载更多</button>
 			</div>
 			<!--<div class="record newact" url="/users/tradeDetail.html"/>
@@ -112,18 +106,19 @@
 					urlApi = api + "txs?page=" + page + '&pageSize=' + pageSize;
 				} else{
 					address = self.address; // all/each
-					urlApi = api + "txs/" + 'Dc883bcc285aae9fe0cb0e5a2af586ed27cfdae693' + "?page="+ page + '&pageSize=' + pageSize;
+					urlApi = api + "txs/" + address + "?page="+ page + '&pageSize=' + pageSize;
 				}
 				loadTradeLisy();
 				// 跳转到详情
 			    $("#tadeMain").on("click", ".each_trade", function() {
-			    	// alert(this)
-			    	// store.set("tadeDetail", $(this).attr("data"));
 					mui.openWindow({
 						id: "../users/tradeDetail.html",
 						url: "../users/tradeDetail.html",
 						extras: {
-							// detailData: $(this).attr("data"),
+							tfrom: $(this).attr("tfrom"),
+							tvalue: $(this).attr("tvalue"),
+							tto: $(this).attr("tto"),
+							thash: $(this).attr("thash"),
 							address: address
 						}
 					})
@@ -147,20 +142,28 @@
 							mui.toast('加载成功');
 							tradeData = ret.data.list; // 交易列表
 							for(var i = 0;i<ret.data.list.length;i++){
-								ret.data.list[i].hash = (ret.data.list[i].hash).substr(0,6) + '...';
 								ret.data.list[i].value = Math.round(ret.data.list[i].value/1000000000000000000 * 100)/100;
 							}
 							if(ret.data.list.length > 0) {
+								$("#no_data").hide();
+								$("#loading_box").show();
 								$.each(ret.data.list, function(i, t) {
 								tradeList += 
-									'<div class="each_trade" data="'+t+'">' + 
+									'<div class="each_trade" tfrom="'+t.from+'" thash="'+t.hash+'" tvalue="'+t.value+'" tto="'+t.to+'">' + 
 										'<div class="left_trade">' +
 											'<span>' + (pageSize*(page-1)+i+1) + '</span>' +
 										'</div>'+
 										'<div class="middle_trade">'+
 											'<div class="hash_num">'+
-												'<span>'+'交易Hash:' + '</span>'+
-												t.hash +
+												'<span>'+'交易Hash: ' + '</span>';
+												if (t.hash.length > 6) {
+													tradeList +=
+													t.hash = t.hash.substr(0,6) + '...';
+												} else {
+													tradeList +=
+													t.hash = t.hash;
+												}
+												tradeList +=
 											'</div>'+
 //											'<div class="trade_date">' + '2018-03-03 13:00' +'</div>' + 
 										'</div>'+
@@ -178,6 +181,9 @@
 									'</div>'
 								})
 								$('#tadeMain').html(tradeList);
+							}else{
+								$("#loading_box").hide();
+								$("#no_data").show();
 							}
 							if ($(".miner_box").length >= tradeList.count){
 								$('.loading').html('已加载全部');
@@ -185,10 +191,14 @@
 								$('.loading').html('加载更多');
 							}
 						} else{
+							$("#loading_box").hide();
+							$("#no_data").show();
 							mui.toast(ret.msg);
 						}
 					},
 					error: function(error) {
+						$("#no_data").show();
+						$("#loading_box").hide();
 						mui.hideLoading();
 						mui.toast(error.responseJSON.msg);
 					}
@@ -213,29 +223,36 @@
 							mui.toast('加载成功');
 							tradeData = ret.data.list; // 交易列表
 							for(var i = 0;i<ret.data.list.length;i++){
-								ret.data.list[i].hash = ret.data.list[i].hash.substr(0,6) + '...';
+								ret.data.list[i].value = Math.round(ret.data.list[i].value/1000000000000000000 * 100)/100;
 							}
 							if(ret.data.list.length > 0) {
 								$.each(ret.data.list, function(i, t) {
 								tradeList += 
-									'<div class="each_trade" data="'+t+'">' + 
+									'<div class="each_trade" tfrom="'+t.from+'" thash="'+t.hash+'" tvalue="'+t.value+'" tto="'+t.to+'">' + 
 										'<div class="left_trade">' +
 											'<span>' + (pageSize*(page-1)+i+1) + '</span>' +
 										'</div>'+
 										'<div class="middle_trade">'+
 											'<div class="hash_num">'+
-												'<span>'+'交易Hash:' + '</span>'+
-												t.hash +
+												'<span>'+'交易Hash: ' + '</span>';
+												if (t.hash.length > 6) {
+													tradeList +=
+													t.hash = t.hash.substr(0,6) + '...';
+												} else {
+													tradeList +=
+													t.hash = t.hash;
+												}
+												tradeList +=
 											'</div>'+
 //											'<div class="trade_date">' + '2018-03-03 13:00' +'</div>' + 
 										'</div>'+
 										'<div class="right_trade">';
 									if(address == t.from){
 										tradeList += 
-										'<div class="orange_into">' + '-' + (t.value/1000000000000000000) + 'DCAR' + '</div>';
+										'<div class="orange_into">' + '-' + t.value + ' DCAR' + '</div>';
 									} else {
 										tradeList += 
-										'<div class="success_add">' + '+' + (t.value/1000000000000000000) + 'DCAR' + '</div>';
+										'<div class="success_add">' + '+' + t.value + ' DCAR' + '</div>';
 									}
 									tradeList += 
 											'<div class="trade_state">' + '交易成功' + '</div>'+
