--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -569,8 +569,8 @@
 //							}
 //							console.log(millList.length);
 							complete(); // 最终合成
-							for(var b =0;b<millList.length;b++){
-						      	balanceTotal += millList[b].balance;
+							for(var b =0;b<millList.list.length;b++){
+						      	balanceTotal += millList.list[b].balance;
 						    }
 							$('#balance').html(balanceTotal);
 //				      		$('#balanceCNY').html(balanceTotal);
