--- a/public/version.html
+++ b/public/version.html
@@ -49,6 +49,7 @@
 		<script src="../js/jquery-2.1.1.min.js"></script>
 		<script src="../js/clipboard/clipboard.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
+			var key;
 			mui.showLoading("加载中...", "div");
 			$.ajax({
 				type: "get",
@@ -79,50 +80,34 @@
 				}
 			});
 			//复制官网链接
-			if (navigator.userAgent.toLowerCase().indexOf("android") > -1) {
-//				alert('android');
-				// 复制地址 
-				$(document).ready(function(){
-					var fooText=$("#addressBox").val();
-		        	var clipboard = new ClipboardJS('#copyAddress');
-		            clipboard.on('success', function(e) {
-			            mui.toast('复制地址成功');
-			            e.clearSelection();
-		            });
-		            clipboard.on('error', function(e) {
-					    mui.toast('复制失败');
-					});
-				})
-			} else {
-//				alert('ios');
-				$('#copyAddress').click(function() {
-					const el = document.createElement('input');
-					const btn = document.getElementById('copyAddress');
-					el.value = $('#addressBox').val();
-					el.style.opacity = '0';
-					document.body.appendChild(el);
-					const editable = el.contentEditable;
-					const readOnly = el.readOnly;
-					el.contentEditable = true;
-					el.readOnly = false;
-					const range = document.createRange();
-					range.selectNodeContents(el);
-					const sel = window.getSelection();
-					sel.removeAllRanges();
-					sel.addRange(range);
-					el.setSelectionRange(0, 999999);
-					el.contentEditable = editable;
-					el.readOnly = readOnly;
-					const ret = document.execCommand('copy');
-					el.blur();
-					btn.text = ret;
-					if(btn.text) {
-						mui.toast('复制地址成功');
-					} else{
-						mui.toast('复制失败');
-					}
-				})
-			}
+			$('#copyAddress').click(function() {
+				key = $("#addressBox").val();
+				const el = document.createElement('input');
+				const btn = document.getElementById('copyAddress');
+				el.value = key;
+				el.style.opacity = '0';
+				document.body.appendChild(el);
+				const editable = el.contentEditable;
+				const readOnly = el.readOnly;
+				el.contentEditable = true;
+				el.readOnly = false;
+				const range = document.createRange();
+				range.selectNodeContents(el);
+				const sel = window.getSelection();
+				sel.removeAllRanges();
+				sel.addRange(range);
+				el.setSelectionRange(0, 999999);
+				el.contentEditable = editable;
+				el.readOnly = readOnly;
+				const ret = document.execCommand('copy');
+				el.blur();
+				btn.text = ret;
+				if(btn.text) {
+					mui.toast('复制成功');
+				} else {
+					mui.toast('复制失败');
+				}
+			})
 //			$("#download").on("click", function(){
 //				final Intent intent = new Intent();
 //				intent.setAction(Intent.ACTION_VIEW);、intent.setData(Uri.parse("http://www.baidu.com"));
