--- a/pages/property.html
+++ b/pages/property.html
@@ -21,7 +21,8 @@
 				<span class="newact" url="/property/import-dcar.html">导入DCAR钱包</span>
 			</div>
 			<!--已创建或导入的钱包-->
-			<div id="dcar_purse"></div>
+			<div id="dcar_purse">
+			</div>
 			<div class="property_card black_bg" id="import_eth" onclick="import_wallet('ETH')">
 				<span>导入ETH钱包</span>
 			</div>
