--- a/users/tradeRecord.html
+++ b/users/tradeRecord.html
@@ -126,6 +126,7 @@
 			});
 			// 根据用户信息查看交易列表
 			function loadTradeLisy() {
+				// tradeData = [];
 				tradeList = '';
 				mui.showLoading("加载中...", "div");
 				$.ajax({
