chore: delete wallet

--- a/property/account-main.html
+++ b/property/account-main.html
@@ -85,7 +85,7 @@
 		<!--删除钱包弹框-->
 		<div class="mui-popover alert_box">
 			<p class="alert_title">提示</p>
-			<div class="alert_body">确定要删除吗？</div>
+			<div class="alert_body">确定要删除钱包吗？</div>
 			<ul class="alert_operate">
 				<li class="alert_button" id="sureConfirm">确定</li>
 				<li class="alert_button" onclick="showHide()">取消</li>
