--- a/pages/market.html
+++ b/pages/market.html
@@ -72,13 +72,13 @@
 					})
 				});
 			});
-			// 获取所有币种行情
+			// 获取dcar_usdt币种行情
 			function getAllCoin(){
 				coinContentList = '';
 				mui.showLoading("加载中...", "div");
 				$.ajax({
 					type: "get",
-					url: bourseApi + 'ticker/getAllCoin',
+					url: bourseApi + "ticker/getTicker" + "?market="+ "dcar_usdt",
 					data: {},
 					async: true,
 					success: function(ret) {
